--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "A Social platform for the creative at heart",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon --exec babel-node index.js"
   },
   "author": "Andela Simulations Programme",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/node": "^7.12.6",
+    "@babel/preset-env": "^7.12.1",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
@@ -22,9 +26,14 @@
     "methods": "^1.1.2",
     "mongoose": "^5.2.2",
     "mongoose-unique-validator": "^2.0.1",
+    "nodemon": "^2.0.6",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "pg": "^8.4.2",
+    "pg-hstore": "^2.3.3",
     "request": "^2.87.0",
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0",
     "underscore": "^1.9.1"
   }
 }
