--- a/src/.sequelizerc
+++ b/src/.sequelizerc
@@ -1,8 +1,8 @@
-import path from 'path'
+const path=require('path')
 
-export default = {
-  config: path.resolve('./database/config', 'config.js'),
-  'models-path': path.resolve('./database/models'),
-  'seeders-path': path.resolve('./database/seeders'),
-  'migrations-path': path.resolve('./database/migrations'),
+module.exports = {
+  config: path.resolve('./config', 'config.js'),
+  'models-path': path.resolve('./models'),
+  'seeders-path': path.resolve('./seeders'),
+  'migrations-path': path.resolve('./migrations'),
 }
