--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
   },
   "extends": ["airbnb-base"],
   "parserOptions": {
-    "ecmaVersion": 12,
+    "ecmaVersion": 6,
     "sourceType": "module"
   },
   "rules": {
@@ -18,6 +18,10 @@
     "consistent-return": 0,
     "no-param-reassign": 0,
     "comma-dangle": 0,
+    "quotes": [2, "double", "avoid-escape"],
+    "no-unused-vars": 0,
+    "no-console": 0,
+    "func-names": 0,
     "curly": ["error", "multi-line"],
     "import/no-unresolved": [2, { "commonjs": true }],
     "no-shadow": ["error", { "allow": ["req", "res", "err"] }],
