--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "express-authorshaven",
   "version": "1.0.0",
   "description": "A Social platform for the creative at heart",
+  "type": "module",
   "main": "index.js",
-  "scripts": {
-    "start": "node src/index.js",
+ "scripts": {
+    "start": "node --experimental-json-modules src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec babel-node src/index.js",
+    "dev": "nodemon --exec babel-node --experimental-json-modules src/index.js",
     "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "author": "Andela Simulations Programme",
@@ -28,16 +29,19 @@
     "jsonwebtoken": "^8.3.0",
     "method-override": "^2.3.10",
     "methods": "^1.1.2",
-    "mongoose": "^5.2.2",
+    "mongoose": "^5.10.15",
     "mongoose-unique-validator": "^2.0.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^8.5.0",
+    "pg-hstore": "^2.3.3",
     "request": "^2.87.0",
     "swagger-jsdoc": "^5.0.1",
     "swagger-ui-express": "^4.1.4",
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
