--- a/package.json
+++ b/package.json
@@ -20,22 +20,21 @@
     "cors": "^2.8.4",
     "coveralls": "^3.1.0",
     "dotenv": "^6.2.0",
-    "ejs": "^2.6.1",
-    "errorhandler": "^1.5.0",
-    "express": "^4.16.3",
-    "express-jwt": "^6.0.0",
-    "express-session": "^1.15.6",
-    "jsonwebtoken": "^8.3.0",
+    "ejs": "^2.7.4",
+    "errorhandler": "^1.5.1",
+    "express": "^4.17.1",
+    "express-jwt": "^5.3.3",
+    "express-session": "^1.17.1",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^2.3.10",
     "methods": "^1.1.2",
-    "mongoose": "^5.2.2",
-    "mongoose-unique-validator": "^2.0.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^8.5.0",
     "request": "^2.87.0",
+    "sequelize": "^6.3.5",
     "swagger-jsdoc": "^5.0.1",
     "swagger-ui-express": "^4.1.4",
     "underscore": "^1.9.1"
