--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
-language:node_js
+language: node_js
 node_js:
-     -"stable"
-cache:
-  directories:
-     -"node_modules"
-after_success:
+     - 12.18.4
+     - node
+ after_success:
   - npm run coverage
