--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "passport-local": "^1.0.0",
     "pg": "^8.5.0",
     "request": "^2.87.0",
+    "swagger-jsdoc": "^5.0.1",
+    "swagger-ui-express": "^4.1.4",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
