--- a/package.json
+++ b/package.json
@@ -1,8 +1,25 @@
 {
-  "name": "express-authorshaven",
+  "name": "tech-strikers-bn-backend",
   "version": "1.0.0",
-  "description": "A Social platform for the creative at heart",
+  "description": "[![Reviewed by Hound](https://img.shields.io/badge/Reviewed_by-Hound-8E64B0.svg)](https://houndci.com)",
   "main": "index.js",
+  "type": "module",
+  "dependencies": {
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/node": "^7.12.6",
+    "@babel/preset-env": "^7.12.1",
+    "cors": "^2.8.5",
+    "errorhandler": "^1.5.1",
+    "express-session": "^1.17.1",
+    "mongoose": "^5.10.14",
+    "nodemon": "^2.0.6",
+    "pg": "^8.5.0",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0"
+  },
+  "devDependencies": {},
   "scripts": {
     "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,38 +28,6 @@
   },
   "author": "Andela Simulations Programme",
   "license": "MIT",
-  "dependencies": {
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.12.3",
-    "@babel/node": "^7.12.6",
-    "@babel/preset-env": "^7.12.1",
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.4",
-    "coveralls": "^3.1.0",
-    "dotenv": "^6.2.0",
-    "ejs": "^2.6.1",
-    "errorhandler": "^1.5.0",
-    "express": "^4.16.3",
-    "express-jwt": "^6.0.0",
-    "express-session": "^1.15.6",
-    "jsonwebtoken": "^8.3.0",
-    "method-override": "^2.3.10",
-    "methods": "^1.1.2",
-    "mongoose": "^5.2.2",
-    "mongoose-unique-validator": "^2.0.1",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.6",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "pg": "^8.5.0",
-    "request": "^2.87.0",
-    "underscore": "^1.9.1"
-  },
-  "devDependencies": {
-    "eslint": "^7.13.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^15.1.0"
-  }
+  
+  "homepage": "https://github.com/atlp-rwanda/tech-strikers-bn-backend#readme"
 }
