chore(actions):Setup github action - Connecting with github actions - Configure nodejs.yml - Add badge for showing that build passes [Finishes #175974127]

--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
   "name": "express-authorshaven",
   "version": "1.0.0",
-  "type": "module",
   "description": "A Social platform for the creative at heart",
   "main": "src/index.js",
   "scripts": {
-    "start": "node --experimental-json-modules src/index.js",
-    "test": "nyc --reporter=text mocha --experimental-json-modules --exit",
-    "dev": "nodemon --exec babel-node --experimental-json-modules src/index.js",
-    "coverage": "nyc --reporter=lcov --reporter=text-lcov --all -x \"./node_modules/\" -x \"./coverage/\" npm run test && nyc report --reporter=text-lcov | coveralls"
+    "prestart": "npm run migrations",
+    "start": "babel-node src/index.js",
+    "dev": "nodemon --exec babel-node  src/index.js",
+    "create-db": "npx sequelize-cli db:create",
+    "drop-db": "npx sequelize-cli db:drop",
+    "migrations": "npx sequelize-cli db:migrate",
+    "undo": "npx sequelize-cli db:migrate:undo:all",
+    "seed": "npx sequelize-cli db:seed:all",
+    "undo-seed": "npx sequelize-cli db:seed:undo",
+    "test": "cross-env NODE_ENV=test nyc  mocha --require @babel/register --timeout 10000 --exit ./test/**/*.js",
+    "pretest": "cross-env NODE_ENV=test npm run drop-db && cross-env NODE_ENV=test npm run create-db && cross-env NODE_ENV=test npm run migrations",
+    "coverage": "nyc --reporter=lcov npm test"
   },
   "author": "Andela Simulations Programme",
   "license": "MIT",
@@ -17,7 +24,10 @@
     "@babel/core": "^7.12.3",
     "@babel/node": "^7.12.6",
     "@babel/preset-env": "^7.12.1",
+    "@babel/register": "^7.12.1",
     "@sendgrid/mail": "^7.4.0",
+    "@types/regenerator-runtime": "^0.13.0",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "coveralls": "^3.1.0",
@@ -31,10 +41,13 @@
     "method-override": "^2.3.10",
     "methods": "^1.1.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.16",
+    "nodemailer-sendgrid": "^1.0.3",
     "nodemon": "^2.0.6",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
+    "regenerator-runtime": "^0.13.7",
     "request": "^2.87.0",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0",
@@ -45,6 +58,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "cross-env": "^7.0.3",
     "eslint": "^7.13.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
