--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 SECRET = "Json web token secret"
 API_VERSION= 'api version of the application'
-DATABASE_URL=
+DATABASE_URL= 
 DEV_DATABASE_URL=postgres://<db_user>:<db_password>@127.0.0.1:5432/dev_db
 TEST_DATABASE_URL=postgres://<db_user>:<db_password>@127.0.0.1:5432/test_db
+NODE_ENV #= development | test | production 
+SENDGRID_API_KEY = "API KEY FOR SENDGRID TO SEND EMAIL"
+EMAIL_SENDER = "THE EMAIL OF THE SENDER"
