--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "express-jwt": "^6.0.0",
     "express-session": "^1.17.1",
     "i18n": "^0.13.2",
+    "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
     "method-override": "^2.3.10",
