--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,7 @@
     "one-var": 0,
     "one-var-declaration-per-line": 0,
     "new-cap": 0,
-    "consistent-return": 0,
+    "consistent-return": 1,
     "no-param-reassign": 0,
     "comma-dangle": 0,
     "quotes": [2, "double", "avoid-escape"],
@@ -26,6 +26,7 @@
     "arrow-parens":"off",
     "global-require": "off",
     "sort-imports":"off",
+    "no-return-await":"off",
     "curly": ["error", "multi-line"],
     "import/no-unresolved": [2, { "commonjs": true }],
     "no-shadow": ["error", { "allow": ["req", "res", "err"] }],
@@ -35,7 +36,7 @@
         "requireReturn": true,
         "requireReturnType": true,
         "requireParamDescription": false,
-        "requireReturnDescription": true
+        "requireReturnDescription": false
       }
     ],
     "require-jsdoc": [
