--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -40,9 +40,10 @@ jobs:
       env:
         TEST_DATABASE_URL: postgres://postgres:postgres@localhost:5432/test
         REDIS_URL: redis://localhost:6379
-        API_VERSION: v1
-        SENDGRID_API_KEY: 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
-        EMAIL_SENDER: strikers668@gmail.com
+        API_VERSION: ${{ secrets.API_VERSION }}
+        SENDGRID_API_KEY: ${{secrets.SENDGRID_API_KEY}}
+        EMAIL_SENDER: ${{secrets.EMAIL_SENDER}}
+        ACCESS_TOKEN_SECRET: ${{secrets.ACCESS_TOKEN_SECRET}}
 
      # Save coverage report in Coveralls
     - name: Coveralls GitHub Action
