--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # Edit at https://www.gitignore.io/?templates=node
 
 ### Node ###
-
+.vscode
 # Logs
 logs
 *.log
@@ -92,5 +92,5 @@ typings/
 
 # DynamoDB Local files
 .dynamodb/
-
+.dccache
 # End of https://www.gitignore.io/api/node
