--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,7 @@
     "func-names": 0,
     "arrow-parens":"off",
     "global-require": "off",
-    "sort-imports":"warn",
+    "sort-imports":"off",
     "curly": ["error", "multi-line"],
     "import/no-unresolved": [2, { "commonjs": true }],
     "no-shadow": ["error", { "allow": ["req", "res", "err"] }],
