--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "^7.12.3",
     "@babel/node": "^7.12.6",
     "@babel/preset-env": "^7.12.1",
+    "@sendgrid/mail": "^7.4.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "coveralls": "^3.1.0",
@@ -35,6 +36,7 @@
     "pg": "^8.5.1",
     "request": "^2.87.0",
     "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0",
     "swagger-jsdoc": "^5.0.1",
     "swagger-ui-express": "^4.1.4",
     "underscore": "^1.9.1"
