chore(sequelizerc):setup sequerize create sequerizerc file create user model remove mongoose install bluebird dependecy create seeders using bluebird [finishes #175636830]

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,5 @@
 SECRET = "Json web token secret"
 API_VERSION= 'api version of the application'
-DEV_DB_USERNAME= 'DEVELOPMENT DATABASE USERNAME'
-DEV_DB_PASSWORD = 'DEVELOPMENT DATABASE PASSWORD'
-DEV_DB_NAME = 'DEVELOPMENT DATABASE NAME'
-DEV_DB_HOSTNAME = "DEVELOPMENT DATABASE HOSTNAME"
-DEV_DB_PORT = "DEVELOPMENT DATABASE PORT"
-PROD_DB_USERNAME= 'PRODUCTION DATABASE USERNAME'
-PROD_DB_PASSWORD = "PRODUCTION DATABASE PASSWORD"
-PROD_DB_NAME = 'PRODUCTION DATABASE NAME'
-PROD_DB_HOSTNAME= 'PRODUCTION DATABASE HOSTNAME'
-PROD_DB_PORT = "PRODUCTION DATABASE PORT"
-TEST_DB_USERNAME= 'TEST DATABASE USERNAME'
-TEST_DB_PASSWORD = "TEST DATABASE PASSWORD"
-TEST_DB_NAME = 'TEST DATABASE NAME'
-TEST_DB_HOSTNAME= 'TEST DATABASE HOSTNAME'
-TEST_DB_PORT = "TEST DATABASE PORT"
+DATABASE_URL=
+DEV_DATABASE_URL=postgres://<db_user>:<db_password>@127.0.0.1:5432/dev_db
+TEST_DATABASE_URL=postgres://<db_user>:<db_password>@127.0.0.1:5432/test_db
