--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
   },
   "extends": ["airbnb-base"],
   "parserOptions": {
-    "ecmaVersion": 6,
+    "ecmaVersion": 12,
     "sourceType": "module"
   },
   "rules": {
@@ -22,6 +22,9 @@
     "no-unused-vars": 0,
     "no-console": 0,
     "func-names": 0,
+    "arrow-parens":"off",
+    "global-require": "off",
+    "sort-imports":"warn",
     "curly": ["error", "multi-line"],
     "import/no-unresolved": [2, { "commonjs": true }],
     "no-shadow": ["error", { "allow": ["req", "res", "err"] }],
