--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "A Social platform for the creative at heart",
   "main": "src/index.js",
-  "scripts": {
-    "prestart": "npm run migrations",
+  "scripts": {"prestart": "npm run migrations",
     "start": "babel-node src/index.js",
     "dev": "nodemon --exec babel-node  src/index.js",
     "create-db": "npx sequelize-cli db:create",
@@ -38,6 +37,7 @@
     "express-jwt": "^6.0.0",
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-simple": "^0.5.6",
     "method-override": "^2.3.10",
     "methods": "^1.1.2",
     "morgan": "^1.10.0",
