feat(multi-languages): Support of multiple languages - Configure i18n for international languages - Add three languages (English, French, Kinya) - Testing the functionality for changing languages
[Delivers #175636777]

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,13 @@
     "curly": ["error", "multi-line"],
     "import/no-unresolved": [2, { "commonjs": true }],
     "no-shadow": ["error", { "allow": ["req", "res", "err"] }],
+    "object-curly-newline": 0,
+    "no-underscore-dangle": [
+      "error",
+      {
+        "allow": ["__"]
+      }
+    ],
     "valid-jsdoc": [
       "error",
       {
