ft(auth): add social media auth
authenticate with passport
use google and facebook passport strategies
store returned user profile in db
add unit test for routes
add routes documentation to swagger

[Finishes #175636844]

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 SECRET = "Json web token secret"
 API_VERSION= 'api version of the application'
-DATABASE_URL= 
+GOOGLE_CLIENT_ID: "clientID"
+GOOGLE_CLIENT_SECRET: "clientSECRET"
+FACEBOOK_CLIENT_ID: "clientID"
+FACEBOOK_CLIENT_SECRET: "clientSECRET"
+DATABASE_URL=
 DEV_DATABASE_URL=postgres://<db_user>:<db_password>@127.0.0.1:5432/dev_db
 TEST_DATABASE_URL=postgres://<db_user>:<db_password>@127.0.0.1:5432/test_db
 NODE_ENV #= development | test | production 
