--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "undo": "npx sequelize-cli db:migrate:undo:all",
     "seed": "npx sequelize-cli db:seed:all",
     "undo-seed": "npx sequelize-cli db:seed:undo",
-    "test": "cross-env NODE_ENV=test nyc  mocha --require @babel/register --timeout 10000 --exit ./test/**/*.js",
+    "test": "cross-env NODE_ENV=test nyc mocha -r regenerator-runtime -r @babel/register --timeout 10000 --exit ./test/**/*.js",
     "pretest": "cross-env NODE_ENV=test npm run drop-db && cross-env NODE_ENV=test npm run create-db && cross-env NODE_ENV=test npm run migrations",
     "coverage": "nyc --reporter=lcov npm test"
   },
@@ -46,8 +46,9 @@
     "nodemailer": "^6.4.16",
     "nodemailer-sendgrid": "^1.0.3",
     "nodemon": "^2.0.6",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.5.1",
     "regenerator-runtime": "^0.13.7",
     "request": "^2.87.0",
@@ -66,6 +67,7 @@
     "eslint-plugin-import": "^2.22.1",
     "mocha": "^8.2.1",
     "mocha-lcov-reporter": "^1.3.0",
+    "node-mocks-http": "^1.9.0",
     "nodemon": "^2.0.6",
     "nyc": "^15.1.0"
   }
