--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 language: node_js
 node_js:
-     - 12.18.4
-     - node
- after_success:
+  - 12
+  - node
+services: postgresql
+before_script: 
+  - psql -c 'create database travis_ci_test;' -U postgres
+script:
+  - npm install
+  - npm run test
+notification:
+  - email: false
+after_success:
   - npm run coverage
