--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "express-authorshaven",
   "version": "1.0.0",
+  "type": "module",
   "description": "A Social platform for the creative at heart",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec babel-node src/index.js",
-    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
+    "start": "node --experimental-json-modules src/index.js",
+    "test": "nyc --reporter=text mocha --experimental-json-modules --exit",
+    "dev": "nodemon --exec babel-node --experimental-json-modules src/index.js",
+    "coverage": "nyc --reporter=lcov --reporter=text-lcov --all -x \"./node_modules/\" -x \"./coverage/\" npm run test && nyc report --reporter=text-lcov | coveralls"
   },
   "author": "Andela Simulations Programme",
   "license": "MIT",
@@ -17,14 +18,14 @@
     "@babel/node": "^7.12.6",
     "@babel/preset-env": "^7.12.1",
     "@sendgrid/mail": "^7.4.0",
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.4",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "coveralls": "^3.1.0",
     "dotenv": "^6.2.0",
     "ejs": "^2.7.4",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
-    "express-jwt": "^5.3.3",
+    "express-jwt": "^6.0.0",
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^2.3.10",
@@ -42,10 +43,14 @@
     "underscore": "^1.9.1"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "eslint": "^7.13.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "mocha": "^8.2.1",
     "mocha-lcov-reporter": "^1.3.0",
+    "nodemon": "^2.0.6",
     "nyc": "^15.1.0"
   }
 }
