--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "express-authorshaven",
   "version": "1.0.0",
-  "type": "module",
   "description": "A Social platform for the creative at heart",
   "main": "src/index.js",
   "scripts": {
@@ -18,8 +17,9 @@
     "@babel/node": "^7.12.6",
     "@babel/preset-env": "^7.12.1",
     "@sendgrid/mail": "^7.4.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
+    "cors": "^2.8.4",
     "coveralls": "^3.1.0",
     "dotenv": "^6.2.0",
     "ejs": "^2.7.4",
@@ -40,7 +40,8 @@
     "sequelize-cli": "^6.2.0",
     "swagger-jsdoc": "^5.0.1",
     "swagger-ui-express": "^4.1.4",
-    "underscore": "^1.9.1"
+    "underscore": "^1.9.1",
+    "validator": "^13.1.17"
   },
   "devDependencies": {
     "chai": "^4.2.0",
