feat(login):login user with email and password -user should login using correct email and password -user can get a token contains id, name, role, username and email -the token should not contain password
[Finishes  #17563684]

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.gitignore.io/api/node
 # Edit at https://www.gitignore.io/?templates=node
 
@@ -92,5 +91,10 @@ typings/
 
 # DynamoDB Local files
 .dynamodb/
+
 .dccache
 # End of https://www.gitignore.io/api/node
+
+
+# End of https://www.gitignore.io/api/node
+.env 
