--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "undo": "npx sequelize-cli db:migrate:undo:all",
     "seed": "npx sequelize-cli db:seed:all",
     "undo-seed": "npx sequelize-cli db:seed:undo",
-    "test": "cross-env NODE_ENV=test nyc mocha -r regenerator-runtime -r @babel/register --timeout 10000 --exit ./test/**/*.js",
-    "pretest": "cross-env NODE_ENV=test npm run drop-db && cross-env NODE_ENV=test npm run create-db && cross-env NODE_ENV=test npm run migrations",
+    "test": "cross-env NODE_ENV=test nyc  mocha --require @babel/register --timeout 30000 --exit ./test/**/*.js",
+    "pretest": "cross-env NODE_ENV=test npm run drop-db && cross-env NODE_ENV=test npm run create-db && cross-env NODE_ENV=test npm run migrations && cross-env NODE_ENV=test npm run seed",
     "coverage": "nyc --reporter=lcov npm test"
   },
   "author": "Andela Simulations Programme",
@@ -28,8 +28,9 @@
     "@sendgrid/mail": "^7.4.0",
     "@types/regenerator-runtime": "^0.13.0",
     "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
+    "cors": "^2.8.4",
     "coveralls": "^3.1.0",
     "dotenv": "^6.2.0",
     "ejs": "^2.7.4",
@@ -54,6 +55,7 @@
     "request": "^2.87.0",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0",
+    "supertest": "^6.0.1",
     "swagger-jsdoc": "^5.0.1",
     "swagger-ui-express": "^4.1.4",
     "underscore": "^1.9.1"
