--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "author": "Andela Simulations Programme",
   "license": "MIT",
   "dependencies": {
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.12.3",
+    "@babel/cli": "^7.12.8",
+    "@babel/core": "^7.12.9",
     "@babel/node": "^7.12.6",
     "@babel/preset-env": "^7.12.1",
     "@babel/register": "^7.12.1",
@@ -33,6 +33,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.23.0",
+    "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
     "coveralls": "^3.1.0",
     "datauri": "^3.0.0",
@@ -62,8 +63,9 @@
     "sequelize-cli": "^6.2.0",
     "supertest": "^6.0.1",
     "swagger-jsdoc": "^5.0.1",
-    "swagger-ui-express": "^4.1.4",
-    "underscore": "^1.9.1"
+    "swagger-ui-express": "^4.1.5",
+    "underscore": "^1.12.0",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
