--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ TEST_DATABASE_URL=postgres://<db_user>:<db_password>@127.0.0.1:5432/test_db
 NODE_ENV #= development | test | production 
 SENDGRID_API_KEY = "API KEY FOR SENDGRID TO SEND EMAIL"
 EMAIL_SENDER = "THE EMAIL OF THE SENDER"
+SUPER_ADMIN_PASSWORD = superAdmin 
