feat(role-setting): add userRole setting in the system
 - create superAdministrator(IT stuff) role
 - add functionality for superAdministrator to assign roles to users using their emails
 - add functionality for superAdministrator to update or delete roles of users

[Finishes #175636852]

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -48,6 +48,7 @@ jobs:
           SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
           EMAIL_SENDER: ${{ secrets.EMAIL_SENDER }}
           ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
+          SUPER_ADMIN_PASSWORD: ${{ secrets.SUPER_ADMIN_PASSWORD }}
 
         # Save coverage report in Coveralls
       - name: Coveralls GitHub Action
