--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,9 +15,10 @@
     "one-var": 0,
     "one-var-declaration-per-line": 0,
     "new-cap": 0,
-    "consistent-return": 1,
+    "consistent-return": 0,
     "no-param-reassign": 0,
     "comma-dangle": 0,
+    "camelcase":"off",
     "quotes": [2, "double", "avoid-escape"],
     "no-unused-vars": 0,
     "no-console": 0,
@@ -28,6 +29,7 @@
     "sort-imports": "off",
     "no-return-await": "off",
     "no-useless-catch": 0,
+    "max-len": "off",
     "import/no-dynamic-require": 0,
     "curly": ["error", "multi-line"],
     "import/no-unresolved": [2, { "commonjs": true }],
@@ -36,7 +38,7 @@
     "no-underscore-dangle": [
       "off",
       {
-        "allow": ["__"]
+        "allow": ["__","_id"]
       }
     ],
     "valid-jsdoc": [
