--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "express-session": "^1.17.1",
+    "google-auth-library": "^7.0.1",
     "i18n": "^0.13.2",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
