feat(reset):reset password reset controller add sendmailer reset router [finishes #175636845]

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ NODE_ENV #= development | test | production
 SENDGRID_API_KEY = "API KEY FOR SENDGRID TO SEND EMAIL"
 EMAIL_SENDER = "THE EMAIL OF THE SENDER"
 SUPER_ADMIN_PASSWORD = superAdmin 
+APP_URL=localhost:3000
