feat(tripRequest): multicity trip request route and get trip requests route by id.
add route for making a multi city trip request
add route that retrieve trip requests by user id.

[delivers #175636850]

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ SENDGRID_API_KEY = "API KEY FOR SENDGRID TO SEND EMAIL"
 EMAIL_SENDER = "THE EMAIL OF THE SENDER"
 SUPER_ADMIN_PASSWORD = superAdmin 
 APP_URL=localhost:3000
+CLOUDINARY_NAME=cloudinary_account_name
+CLOUDINARY_API_KEY=cloudinary_account_key
+CLOUDINARY_API_SECRET=cloudinary_api_secret
