--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Social platform for the creative at heart",
   "main": "src/index.js",
   "scripts": {
-    "prestart": "npm run migrations",
+    "prestart": "npm run migrations && npm run seed",
     "start": "babel-node src/index.js",
     "dev": "nodemon --exec babel-node  src/index.js",
     "create-db": "npx sequelize-cli db:create",
@@ -44,7 +44,7 @@
     "express-jwt": "^6.0.0",
     "express-session": "^1.17.1",
     "i18n": "^0.13.2",
-    "joi": "^14.3.1",
+    "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
     "method-override": "^2.3.10",
